@@ -1,0 +1,3 @@
+{
+  "data": [85.0, 85.0, 85.0, 85.0, 90.0, 90.0, 90.0, 90.0, 90.0, 90.0, 85.0, 85.0]
+}
