@@ -37,3 +37,4 @@
 2023-09-07: Add satellite irradiance endpoint
 2023-10-04: Add endpoints with different power control sources for yield loss calculation
 2023-10-31: Remove the yield loss calculation endpoints that didn't specify the power control sources
+2023-12-25: Add kpi targets endpoints
